--- a/views/about.ejs
+++ b/views/about.ejs
@@ -24,11 +24,9 @@
         </header>
         <main class="px-3 container">
             <h1>ChatZone</h1>
-            <p class="lead"> <br>This application is just for knowledge purpose. Developed By: Akshay Kumar <br>
+            <p class="lead"> <br>This application is just for knowledge purpose. Developed By: Geek <br>
             Just run the app and tell your friend to do the same and then enter your name that's it.Feel free to talk with stranger<br> other things are in development.<br>Thank you!!</p>
-            <a href="/chatzone" class="btn btn-lg btn-1 font-weight-bold border-white bg-white">Start</a>
         </main>
-
         <footer class="mt-auto text-white-50">
             <p>&copy; 2021 </p>
         </footer>
