--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 
     <ul id="messages"></ul>
     <form action="/" method="#" id="chatForm">
-      <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button type="submit">Send</button>
+      <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button type="submit">&#xe163;</button>
     </form>
     <script src="/script/chat.js"></script>
 </body>
