--- a/public/app.css
+++ b/public/app.css
@@ -26,12 +26,12 @@ form input{
     border-style: solid; 
     border-width: 1px; 
     padding: 10px; 
-    width: 85%; 
-    margin-right: .5%; 
+    width: 90%; 
+    /* margin-right: .5%;  */
     outline-color: rgb(0, 183, 255);
 }
 form button{ 
-    width: 9%; 
+    width: 4%; 
     background: rgb(47, 105, 212); 
     border:1px solid rgb(0, 132, 255);
     border-radius: 5%;
@@ -39,10 +39,9 @@ form button{
     box-shadow: currentColor;
     text-shadow: rgb(0, 183, 255);
     color:white;
-    padding: 10px; 
-    margin-left: 2%; 
-    font-size: medium;
-    font-weight: 500;
+    padding: 5px; 
+    margin-left: 10px;
+    /* margin-right: 1%; */
     cursor: pointer;
 }
 #messages{ 
