--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatZone</title>
+    <title>Chatify</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <link rel="stylesheet" href="home.css">
@@ -15,7 +15,7 @@
         <header class="mb-auto">
             <div>
                 <nav class="nav nav-masthead navbar-expand-lg justify-content-center float-md-left">
-                    <a class="navbar-brand" href="/"><h3>ChatZone</h3></a>
+                    <a class="navbar-brand" href="/"><h3>Chatify</h3></a>
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <!-- <a class="nav-link" href="/campgrounds">Campgrounds</a> -->
                     <a class="nav-link" aria-current="page" href="/about">About</a>
@@ -23,7 +23,7 @@
             </div>
         </header>
         <main class="px-3 container">
-            <h1>ChatZone</h1>
+            <h1>Chatify</h1>
             <p class="lead"> <br>This application is just for knowledge purpose. Developed By: Geek <br>
             Just run the app and tell your friend to do the same and then enter your name that's it.Feel free to talk with stranger<br> other things are in development.<br>Thank you!!</p>
         </main>
