--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Room</title>
+    <title>Chatify</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
     <script src="/socket.io/socket.io.js"></script>
@@ -14,7 +14,7 @@
 
     <ul id="messages"></ul>
     <form action="/" method="#" id="chatForm">
-      <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button type="submit" class="material-icons">&#xe163;</button>
+    <input id="txt" value=<%=user1%>  autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button type="submit" class="material-icons">&#xe163;</button>
     </form>
     <script src="/script/chat.js"></script>
 </body>
