--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,12 +23,12 @@
         </header>
         <main class="px-3">
             <h1>Chatify</h1>
-            <p class="lead"> Welcome to ChatZone! <br> Just tell your buddy to open site and chat all alone!!<br>
-                This is basically a stranger Hub!!</p>
+            <p class="lead"> Welcome to Chatify! <div class="in1">Just enter your username and start your chat</div> 
+                <div class="in1"> welcome strangers as this is StrangerHub!!</div></p>
             
             <div>
             <form action="/chat" method="POST">
-                <input id="user1" name="username" autocomplete="off" autofocus="on" placeholder="Enter your username..." required/>
+                <input id="user1" name="username" autocomplete="off" autofocus="on" placeholder="Username..." required/>
                     <div>
                         <button id="btn" type="submit" class="btn btn-lg mt-3 btn-1 font-weight-bold border-white bg-white">Start</button>
                     </div>
