--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatify</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="app.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
@@ -13,8 +16,12 @@
 <body>
 
     <ul id="messages"></ul>
+    <!-- <h5 class="temp"></h6> -->
     <form action="/" method="#" id="chatForm">
-    <input id="txt" value=<%=user1%>  autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button type="submit" class="material-icons">&#xe163;</button>
+    <input id="txt" value=<%=user1%>  autocomplete="off" autofocus="on" placeholder="type your message here..." />
+    <button type="submit" class="btn btn-info btn-lg">
+        <span class="glyphicon glyphicon-send"></span> </button>
+    <!-- <button type="submit" class="material-icons">&#xe163;</button> -->
     </form>
     <script src="/script/chat.js"></script>
 </body>
