--- a/public/app.css
+++ b/public/app.css
@@ -10,6 +10,7 @@ body{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("https://images.unsplash.com/photo-1604881988758-f76ad2f7aac1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80");
     background-size: cover;
+    background-repeat:no-repeat;
     background-position: center;
 }
 
